--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="assets/css/helpers.css">
 
   <!-- ------activate link below to debug layout------ -->
-  <!-- <link rel="stylesheet" href="assets/css/debug.css"> -->
+  <link rel="stylesheet" href="assets/css/debug.css">
 
   <!-- Scroll cue thanks to https://cssanimation.rocks/scroll-cue/ -->
   <section class="header-down-arrow">
@@ -113,19 +113,16 @@
             <div class="columns is-hidden-desktop">
                 <div class="column is-4 is-offset-4">
                     <div class="card has-background-black has-text-centered">
-                        <h1 class="title center">
-                            My-Time <br>Sun-Tracker
-                        </h1>
-                        <br>
-                        <p class="subtitle center">
-                            A simple app to find what solar times are in your local time.
-                        </p>
-                        <p class="subtitle center">
-                            <!-- Displays "Sunrise / Sunset" -->
-                            <span class="has-text-warning hero-text">Sunrise</span>
-                            &nbsp / &nbsp
-                            <span class="has-text-danger hero-text">Sunset</span>!
-                        </p>
+                        <h1 class="title center has-text-warning">
+                          My-Time                            
+                      </h1>
+                      <h1 class="title center has-text-danger">
+                        Sunrise / Sunset Tracker                            
+                      </h1>
+                      <br>
+                      <p class="subtitle center">
+                          A simple app to find solar times in your local time.
+                      </p>
                     </div>
                 </div>
             </div>
@@ -155,7 +152,7 @@
                     </div>
                 </div>
                 <div class=" column is-4">
-                    <div class="card has-background-black has-text-centered is-hidden-mobile">
+                    <div class="card has-background-black has-text-centered is-hidden-touch">
                         <h1 class="title center has-text-warning">
                             My-Time                            
                         </h1>
