resized images, gave times in cards medium weight, gave time labels responsive size for smaller screens

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="assets/css/helpers.css">
 
   <!-- ------activate link below to debug layout------ -->
-  <link rel="stylesheet" href="assets/css/debug.css">
+  <!-- <link rel="stylesheet" href="assets/css/debug.css"> -->
 
   <!-- Scroll cue thanks to https://cssanimation.rocks/scroll-cue/ -->
   <section class="header-down-arrow is-hidden-mobile">
@@ -133,8 +133,8 @@
                           <img src="assets\images\sun.png" alt="noon">
                         </div>
                         <div class="card-content has-text-centered" id="times-noon">
-                          <p class="has-text-info">Solar Noon</p>
-                          <p><span id="time_noon" class="has-text-info"></span></p>
+                          <p class="has-text-info is-size-3-mobile">Solar Noon</p>
+                          <p><span id="time_noon" class="has-text-info has-text-weight-medium"></span></p>
                         </div>
                     </div>
                 </div>
@@ -142,12 +142,12 @@
             <div class="columns is-2-mobile">
                 <div class="column is-4">
                     <div class="card has-background-black">
-                        <div class="card-image has-text-centered has-text-white px-6 ">
+                        <div class="card-image is-24X24 has-text-centered has-text-white px-6 ">
                             <img src="assets\images\sunrise.png" alt="sunrise">
                         </div>
                         <div class="card-content has-text-centered" id="times-sunrise">
-                            <p class="has-text-warning">Sunrise</p>
-                            <p><span id="time_sunrise" class="has-text-warning"></span></p>
+                            <p class="has-text-warning is-size-3-mobile">Sunrise</p>
+                            <p><span id="time_sunrise" class="has-text-warning has-text-weight-medium"></span></p>
                         </div>
                     </div>
                 </div>
@@ -172,8 +172,8 @@
                             <img src="assets\images\sunset.png" alt="sunset">
                         </div>
                         <div class="card-content has-text-centered" id="times-sunset">
-                            <p class="has-text-danger">Sunset</p>
-                            <p> <span id="time_sunset" class="has-text-danger"></span></p>
+                            <p class="has-text-danger is-size-3-mobile">Sunset</p>
+                            <p> <span id="time_sunset" class="has-text-danger has-text-weight-medium"></span></p>
                         </div>
                     </div>
                 </div>
