--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </div>
           </div>
         </div>
-        <div class="columns is-hidden-desktop">        
+        <div class="columns is-hidden-desktop">
           <div class="column is-4 is-offset-4">
             <div class="card has-background-black">
               <div class="card-image is-24X24 has-text-centered has-text-white px-6 ">
@@ -138,7 +138,7 @@
               </div>
               <div class="card-content has-text-centered" id="times-sunrise">
                 <p class="has-text-warning is-size-3-mobile">Sunrise</p>
-                <p><span id="time_sunrise" class="has-text-warning has-text-weight-medium"></span></p>
+                <p><span id="time_sunrise_mobile" class="has-text-warning has-text-weight-medium"></span></p>
               </div>
             </div>
           </div>
@@ -164,7 +164,7 @@
               </div>
               <div class="card-content has-text-centered" id="times-sunrise">
                 <p class="has-text-warning is-size-3-mobile">Sunrise</p>
-                <p><span id="time_sunrise" class="has-text-warning has-text-weight-medium"></span></p>
+                <p><span id="time_sunrise_desktop" class="has-text-warning has-text-weight-medium"></span></p>
               </div>
             </div>
           </div>
