repositioned span element into same <p> as time label

--- a/index.html
+++ b/index.html
@@ -137,8 +137,10 @@
                 <img src="assets\images\sunrise.png" alt="sunrise">
               </div>
               <div class="card-content has-text-centered" id="times-sunrise">
-                <p class="has-text-warning is-size-3-mobile">Sunrise</p>
-                <p><span id="time_sunrise_mobile" class="has-text-warning has-text-weight-medium"></span></p>
+                <p class="has-text-warning is-size-3-mobile">
+                  Sunrise<br>
+                  <span id="time_sunrise_mobile" class="has-text-warning has-text-weight-medium"></span>
+                </p>
               </div>
             </div>
           </div>
@@ -150,8 +152,10 @@
                 <img src="assets\images\sun.png" alt="noon">
               </div>
               <div class="card-content has-text-centered" id="times-noon">
-                <p class="has-text-info is-size-3-mobile">Solar Noon</p>
-                <p><span id="time_noon" class="has-text-info has-text-weight-medium"></span></p>
+                <p class="has-text-info is-size-3-mobile">
+                  Solar Noon<br>
+                  <span id="time_noon" class="has-text-info has-text-weight-medium"></span>
+                </p>
               </div>
             </div>
           </div>
@@ -163,8 +167,10 @@
                 <img src="assets\images\sunrise.png" alt="sunrise">
               </div>
               <div class="card-content has-text-centered" id="times-sunrise">
-                <p class="has-text-warning is-size-3-mobile">Sunrise</p>
-                <p><span id="time_sunrise_desktop" class="has-text-warning has-text-weight-medium"></span></p>
+                <p class="has-text-warning is-size-3-mobile">
+                  Sunrise<br>
+                  <span id="time_sunrise_desktop" class="has-text-warning has-text-weight-medium"></span>
+                </p>
               </div>
             </div>
           </div>
@@ -189,8 +195,10 @@
                 <img src="assets\images\sunset.png" alt="sunset">
               </div>
               <div class="card-content has-text-centered" id="times-sunset">
-                <p class="has-text-danger is-size-3-mobile">Sunset</p>
-                <p> <span id="time_sunset" class="has-text-danger has-text-weight-medium"></span></p>
+                <p class="has-text-danger is-size-3-mobile">
+                  Sunset<br>
+                  <span id="time_sunset" class="has-text-danger has-text-weight-medium"></span>
+                </p>
               </div>
             </div>
           </div>
