scroll cue only appears 1024px wide and above, retitle the new header displays spans weirdly between ~766px and 920px

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Sunrise-Sunset-App</title> <!-- TODO: update title -->
+  <title>Solar Time Tracker</title> <!-- TODO: update title -->
   <!-- cdn for bulma.io -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.1/css/bulma.min.css"
     integrity="sha512-ZRv40llEogRmoWgZwnsqke3HNzJ0kiI0+pcMgiz2bxO6Ew1DVBtWjVn0qjrXdT3+u+pSN36gLgmJiiQ3cQtyzA=="
@@ -37,7 +37,7 @@
     <div class="navbar-brand">
       <a class="navbar-item">
         <i class="fa fa-sun fa-2x has-text-white"></i>
-        <span class="ml-2">My-Time-Sun-Tracker</span>
+        <span class="ml-2">Solar Time Tracker</span>
       </a>
 
       <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbar"
@@ -117,16 +117,11 @@
         <div class="columns is-hidden-desktop">
           <div class="column is-4 is-offset-4">
             <div class="card has-background-black has-text-centered">
-              <h1 class="title center has-text-warning">
-                My-Time
+              <h1 class="title center has-text-white">
+                <span class="has-text-warning">Solar</span>-
+                <span class="has-text-info">Time</span>-
+                <span class="has-text-danger">Tracker</span>
               </h1>
-              <h1 class="title center has-text-danger">
-                Sunrise / Sunset Tracker
-              </h1>
-              <br>
-              <p class="subtitle center">
-                A simple app to find solar times in your local time.
-              </p>
             </div>
           </div>
         </div>
@@ -176,17 +171,11 @@
           </div>
           <div class=" column is-4">
             <div class="card has-background-black has-text-centered is-hidden-touch">
-              <h1 class="title center has-text-warning">
-                My-Time
+              <h1 class="title center has-text-white">
+                <span class="has-text-warning">Solar</span>-
+                <span class="has-text-info">Time</span>-
+                <span class="has-text-danger">Tracker</span>
               </h1>
-              <h1 class="title center has-text-danger">
-                Sunrise / Sunset Tracker
-              </h1>
-              <br>
-              <p class="subtitle center">
-                A simple app to find solar times in your local time.
-              </p>
-
             </div>
           </div>
           <div class="column is-4">
