goes with last commit

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- <link rel="stylesheet" href="assets/css/debug.css"> -->
 
   <!-- Scroll cue thanks to https://cssanimation.rocks/scroll-cue/ -->
-  <section class="header-down-arrow is-hidden-mobile">
+  <section class="header-down-arrow">
     <img src="./assets/images/downarrow.png" width="50">
   </section>
 
