--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="assets/css/helpers.css">
 
   <!-- ------activate link below to debug layout------ -->
-  <!-- <link rel="stylesheet" href="assets/css/debug.css"> -->
+  <link rel="stylesheet" href="assets/css/debug.css">
 
   <!-- Scroll cue thanks to https://cssanimation.rocks/scroll-cue/ -->
   <section class="header-down-arrow is-hidden-mobile">
@@ -114,23 +114,23 @@
   <section class="hero is-fullheight-with-navbar has-background-black">
     <div class="hero-body">
       <div class="container">
-        <div class="columns is-hidden-desktop">
+        <div class="columns is-hidden-desktop is-4-touch">
           <div class="column is-4 is-offset-4">
             <div class="card has-background-black has-text-centered">
               <h1 class="title center has-text-warning">
                 My-Time
               </h1>
-              <h1 class="title center has-text-danger">
-                Sunrise / Sunset Tracker
-              </h1>
+              <h2 class="title center has-text-danger is-size-5-touch">
+                Sunrise + Sunset Tracker
+              </h2>
               <br>
-              <p class="subtitle center">
-                A simple app to find solar times in your local time.
+              <p class="subtitle center is-size-5-touch">
+                A simple app to find solar <br>times in your local time.
               </p>
             </div>
           </div>
         </div>
-        <div class="columns is-hidden-desktop">        
+        <div class="columns is-hidden-desktop">
           <div class="column is-4 is-offset-4">
             <div class="card has-background-black">
               <div class="card-image is-24X24 has-text-centered has-text-white px-6 ">
@@ -159,7 +159,7 @@
         <div class="columns is-2-mobile">
           <div class="column is-4 is-hidden-touch">
             <div class="card has-background-black">
-              <div class="card-image is-24X24 has-text-centered has-text-white px-6 ">
+              <div class="card-image has-text-centered has-text-white px-6 ">
                 <img src="assets\images\sunrise.png" alt="sunrise">
               </div>
               <div class="card-content has-text-centered" id="times-sunrise">
@@ -173,11 +173,11 @@
               <h1 class="title center has-text-warning">
                 My-Time
               </h1>
-              <h1 class="title center has-text-danger">
+              <h2 class="title center has-text-danger is-size-5-desktop">
                 Sunrise / Sunset Tracker
-              </h1>
+              </h2>
               <br>
-              <p class="subtitle center">
+              <p class="subtitle center is-size-5-destop">
                 A simple app to find solar times in your local time.
               </p>
 
