--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="assets/css/helpers.css">
 
   <!-- ------activate link below to debug layout------ -->
-  <link rel="stylesheet" href="assets/css/debug.css">
+  <!-- <link rel="stylesheet" href="assets/css/debug.css"> -->
 
   <!-- Scroll cue thanks to https://cssanimation.rocks/scroll-cue/ -->
   <section class="header-down-arrow">
@@ -118,9 +118,9 @@
           <div class="column is-4 is-offset-4">
             <div class="card has-background-black has-text-centered">
               <h1 class="title center has-text-white">
-                <span class="has-text-warning">Solar</span>-
-                <span class="has-text-info">Time</span>-
-                <span class="has-text-danger">Tracker</span>
+                <span class="has-text-warning is-size-4-tablet">Solar</span>-
+                <span class="has-text-info is-size-4-tablet">Time</span>-
+                <span class="has-text-danger is-size-4-tablet">Tracker</span>
               </h1>
             </div>
           </div>
