got rid of red hover on navbar links in main navbar- children still hover red , git hub link no longer white on hover

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
       <div class="navbar-end">
 
-        <a class="navbar-item" href="https://github.com/TechnicalParadox/cbc-group2-project1" target="_blank">
+        <a class="navbar-item" id="github-link" href="https://github.com/TechnicalParadox/cbc-group2-project1" target="_blank">
           Github
           <span class="ml-2"><i class="fab fa-github"></i></span>
         </a>
